--- a/printIbStamp.Rmd
+++ b/printIbStamp.Rmd
@@ -33,40 +33,35 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(data.table)
 
-timbre <- fread("timbre.csv")
-timbre <- timbre[TradeDate > as.Date("2016-12-30") & 
-                     TradeDate <= as.Date("2017-12-31"),]
+timbre <- fread("ibTimbre.csv")
 
+setorder(timbre, OrderTime, Description, -ClientId)
 
 # remove and change column names and reorder columns
 #timbre[, Symbol:= NULL]
+# 
+colnames(timbre) <- c("OrderTime", "AssetClass", "Nom", "Isin", "Date.Op", "Dev", "Type", 
+                      "Nominal", "Prix", "Proceeds", "Client", "Cours", 
+                      "Soumis CH", "Soumis ETR", "Non Soumis", "cliNbr")
 
-colnames(timbre) <- c("Date.Op",    "Dev",
-                      "Cours",      "OrderTime",
-                      "AssetClass", "Nom", 
-                      "Isin",       "Type", 
-                      "Nominal",    "Prix",
-                      "Proceed",    "Client",
-                      "Dom",        "Soumis CH", 
-                      "Soumis ETR", "Non Soumis",
-                      "nbrOfClient")
-
+#add Dom of CURRENT clients
+timbre[Client != "Interactive Brokers", Dom:="CH"]
+timbre[Client == "Interactive Brokers", Dom:="INS"]
 
 # add number of operation
 timbre[, No:= .GRP, by= c("OrderTime", "Nom")] 
 
 # group data to fit A4 page ! change %/% to match length
-timbre[, Grp:= c(nbrOfClient[1], rep(0,.N - 1L)), by= No]
+timbre[, Grp:= c(cliNbr[1], rep(0,.N - 1L)), by= No]
 #timbre[, Grp:= cumsum(Grp) %/% 57 + 1]
-timbre[, Grp:= ceiling(cumsum(Grp)/ 56)]
+timbre[, Grp:= ceiling(cumsum(Grp)/ 59)]
 
 # remove some columns
-timbre$OrderTime <- timbre$nbrOfClient <- timbre$Proceed <- NULL
+timbre$OrderTime <- timbre$cliNbr <- timbre$Proceeds <- timbre$AssetClass <- NULL
 
-timbre <- timbre[, c("Grp",       "No",          "Date.Op",    "Type", 
-                     "Nominal",   "Nom",         "Isin",       "Prix",
-                     "Dev",       "Cours",      "Client",      "Dom",   
-                     "Soumis CH", "Soumis ETR", "Non Soumis")]
+timbre <- timbre[, c("Grp", "No", "Date.Op", "Type","Nominal", "Nom", "Isin", "Prix",
+                     "Dev", "Cours" ,"Client", "Dom", "Soumis CH", "Soumis ETR",
+                      "Non Soumis")]
 
 # calc totals by Group and add empty columns to match timbre structure
 subTotal <- timbre[, lapply(.SD, sum, na.rm= TRUE), 
@@ -104,6 +99,10 @@ setcolorder(empty,    colnames(timbre))
 
 
 printData <- do.call(rbind, list(timbre, empty, subTotal, droits, empty))
+
+printData[, Date.Op:= as.Date(Date.Op)]
+printData <- printData[Date.Op >= as.Date("2017-12-31") & 
+                     Date.Op <= as.Date("2018-03-31"),]
 
 printData[, Date.Op:=  as.character(strftime(
     as.Date(Date.Op, "%Y-%m-%d"), "%d-%m-%Y"))]
