--- a/printIbStamp.Rmd
+++ b/printIbStamp.Rmd
@@ -1,24 +1,13 @@
 ---
-#title: "Registre TimbreDu Timbre Fédéral de négociation"
 author: "Artha Finance SA"
-
 classoption: landscape
 geometry: margin=0.5cm
-
-header-includes:
-    \usepackage{fancyhdr}
-    \pagestyle{fancy}
-    #\usepackage{booktabs}
-    # \lhead{Artha Finance SA}
-     # \chead{\textbf{Registre des Negociations}}
-     # \rhead{Interactive Brokers (U.K.) Limited}
-     # \lfoot{}
-     # \cfoot{}
-     # \rfoot{\thepage}
-
-
-output: pdf_document
-
+header-includes: \usepackage{fancyhdr} \pagestyle{fancy}
+output:
+  pdf_document: default
+  html_document:
+    df_print: paged
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -30,6 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r tidy data, echo= FALSE, include= FALSE}
+
 
 library(data.table)
 
@@ -54,7 +44,7 @@ timbre[, No:= .GRP, by= c("OrderTime", "Nom")]
 # group data to fit A4 page ! change %/% to match length
 timbre[, Grp:= c(cliNbr[1], rep(0,.N - 1L)), by= No]
 #timbre[, Grp:= cumsum(Grp) %/% 57 + 1]
-timbre[, Grp:= ceiling(cumsum(Grp)/ 59)]
+timbre[, Grp:= ceiling(cumsum(Grp)/ 61)]
 
 # remove some columns
 timbre$OrderTime <- timbre$cliNbr <- timbre$Proceeds <- timbre$AssetClass <- NULL
@@ -101,8 +91,8 @@ setcolorder(empty,    colnames(timbre))
 printData <- do.call(rbind, list(timbre, empty, subTotal, droits, empty))
 
 printData[, Date.Op:= as.Date(Date.Op)]
-printData <- printData[Date.Op >= as.Date("2017-12-31") & 
-                     Date.Op <= as.Date("2018-03-31"),]
+printData <- printData[Date.Op >= as.Date("2018-06-30") & 
+                     Date.Op <= as.Date("2018-09-30"),]
 
 printData[, Date.Op:=  as.character(strftime(
     as.Date(Date.Op, "%Y-%m-%d"), "%d-%m-%Y"))]
